# gnuplot-iostream

./: .gitignore  CMakeLists.txt  ChangeLog  FindBlitz.cmake  FindGnuplot-iostream.cmake  LICENSE  Makefile  Makefile.VC  README  TODO  example-blitz-binary.cc  example-blitz-tmpfile.cc  example-blitz.cc  example-data-1d.cc  example-data-2d.cc  example-interactive.cc  example-make-png.cc  example-misc.cc  example-popup.cc  example-tuples.cc  example-uv.cc  example-vectors.cc  examples-blitz.cc  examples-framework.cc  examples-interactive.cc  examples.cc  gnuplot++.cc  gnuplot++.cpp  gnuplot++.h  gnuplot-iostream.cc  gnuplot-iostream.h  stup_to_pair.cc  test-assert-depth-colmajor.cc  test-assert-depth.cc  test-empty.cc  test-noncopyable.cc  test-outputs.cc  test-vc.bat  tests.cc  tests_v2.cc  (+6 more)
cmake/: FindBlitz.cmake  FindGnuplot-iostream.cmake
legacy/: .gitignore  Makefile  README  examples-framework.cc  examples.cc
unittest-errors-good/: test-assert-depth-colmajor.error.txt
unittest-output-good/: ai-Mode1D.txt  ai-log.txt  armacol-log.txt  armamat-Mode2D.txt  armamat-log.txt  armarow-log.txt  bi-Mode1D.txt  bi-log.txt  blitz1d,vd-Mode1D.txt  blitz1d,vd-log.txt  blitz1d-Mode1D.txt  blitz1d-log.txt  blitz2d cols-log.txt  blitz2d,vd-Mode1D.txt  blitz2d,vd-log.txt  blitz2d,vvi-Mode1DUnwrap.txt  blitz2d,vvi-log.txt  blitz2d-Mode1DUnwrap.txt  blitz2d-log.txt  blitz2d_tup-log.txt  boost_tie{ai,bi}-Mode1D.txt  boost_tie{ai,bi}-log.txt  btup{vd,stup{vi,btup{vf},vi},vd}-Mode1D.txt  btup{vd,stup{vi,btup{vf},vi},vd}-log.txt  eigencol-Mode1D.txt  eigencol-log.txt  eigenmat-Mode1DUnwrap.txt  eigenmat-log.txt  eigenrow-log.txt  pair{&si,&bi}-Mode1D.txt  pair{&si,&bi}-log.txt  pair{ai,bi}-log.txt  pair{vf,btup{vd,pair{vi,vi},vf}}-log.txt  pair{vf,stup{vd,pair{vi,vi},vf}}-Mode1D.txt  pair{vf,stup{vd,pair{vi,vi},vf}}-log.txt  si-Mode1D.txt  si-log.txt  std_fwd{ai,bi}-log.txt  std_tie{ai,bi}-log.txt  tie{si,bi}-log.txt  (+31 more)
